# Codeswitch

./: Cargo.toml  README.md
benches/: normalization.rs  query_engine.rs
src/: arena.rs  boundary.rs  cache.rs  core.rs  doctrine.rs  expansion.rs  fingerprint.rs  interface.rs  lib.rs  operations.rs  pattern.rs  query.rs  query.rs.backup  scope.rs  traceability.rs
src/doctrine/: adapter.rs  ext.rs  noop.rs
src/graph/: fast.rs  mod.rs
src/normalize/: mod.rs  worklist.rs
src/pattern_graph/: constants.rs  core.rs  mod.rs  port_view.rs  rewrite.rs  unification.rs
